sayar gyi ha ha

--- a/index.html
+++ b/index.html
@@ -15,26 +15,26 @@
                     <input type="text" id="answer-num">
                 </section>
                 <section class="role">
-                    <div id="seven">7</div>
-                    <div id="eight">8</div>
-                    <div id="nine">9</div>
+                    <div id="seven" class="calculator-btn">7</div>
+                    <div id="eight" class="calculator-btn">8</div>
+                    <div id="nine" class="calculator-btn">9</div>
                     <div id="delete">DEL</div>
                 </section>
                 <section class="role">
-                    <div id="four">4</div>
-                    <div id="five">5</div>
-                    <div id="six">6</div>
+                    <div id="four" class="calculator-btn">4</div>
+                    <div id="five" class="calculator-btn">5</div>
+                    <div id="six" class="calculator-btn">6</div>
                     <div id="plus">+</div>
                 </section>
                 <section class="role">
-                    <div id="one">1</div>
-                    <div id="two">2</div>
-                    <div id="three">3</div>
+                    <div id="one" class="calculator-btn">1</div>
+                    <div id="two" class="calculator-btn">2</div>
+                    <div id="three" class="calculator-btn">3</div>
                     <div id="minus">-</div>
                 </section>
                 <section class="role">
                     <div id="point">.</div>
-                    <div id="zero">0</div>
+                    <div id="zero" class="calculator-btn">0</div>
                     <div id="divided">/</div>
                     <div id="multi">*</div>
                 </section>
